--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
     "@prisma/client": "^5.17.0",
+    "@vercel/postgres": "^0.9.0",
     "formik": "^2.4.6",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
