--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
-DATABASE_URL=mongodb+srv://umar12598:umar321@cluster0.lhgctus.mongodb.net/test
+# Created by Vercel CLI
+DATABASE_URL="mongodb+srv://umar12598:umar321@cluster0.lhgctus.mongodb.net/test"
+POSTGRES_DATABASE="verceldb"
+POSTGRES_HOST="ep-falling-band-a4ho7zbq-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="OiLMm2ZDa9IT"
+POSTGRES_PRISMA_URL="postgres://default:OiLMm2ZDa9IT@ep-falling-band-a4ho7zbq-pooler.us-east-1.aws.neon.tech/verceldb?pgbouncer=true&connect_timeout=15&sslmode=require"
+POSTGRES_URL="postgres://default:OiLMm2ZDa9IT@ep-falling-band-a4ho7zbq-pooler.us-east-1.aws.neon.tech/verceldb?sslmode=require"
+POSTGRES_URL_NON_POOLING="postgres://default:OiLMm2ZDa9IT@ep-falling-band-a4ho7zbq.us-east-1.aws.neon.tech/verceldb?sslmode=require"
+POSTGRES_URL_NO_SSL="postgres://default:OiLMm2ZDa9IT@ep-falling-band-a4ho7zbq-pooler.us-east-1.aws.neon.tech/verceldb"
+POSTGRES_USER="default"
