--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ POSTGRES_URL="postgres://default:OiLMm2ZDa9IT@ep-falling-band-a4ho7zbq-pooler.us
 POSTGRES_URL_NON_POOLING="postgres://default:OiLMm2ZDa9IT@ep-falling-band-a4ho7zbq.us-east-1.aws.neon.tech/verceldb?sslmode=require"
 POSTGRES_URL_NO_SSL="postgres://default:OiLMm2ZDa9IT@ep-falling-band-a4ho7zbq-pooler.us-east-1.aws.neon.tech/verceldb"
 POSTGRES_USER="default"
+NEXT_PUBLIC_MEASUREMENT_ID=G-NS1QVR2CXT
